[package]
name = "substreams-uniswap-v3-info"
version = "0.1.0"
description = "Uniswap v3 Info Substreams"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"

[dependencies]
prost = "0.11.0"
prost-types = "0.11.0"
substreams = { version = "0.5.6" }
substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum" }
substreams-sink-kv = "0.1.1"

[build-dependencies]
prost-build = "0.11.0"
anyhow = "1"
substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum" }

[patch.crates-io]
#substreams = { git = "https://github.com/streamingfast/substreams-rs", branch = "develop" }
substreams = { path = "/Users/abourget/sf/substreams-rs/substreams" }
